Updated the logo path to match the deployment.

--- a/src/Parrot.Client/parrot/src/app/home/home/home.component.html
+++ b/src/Parrot.Client/parrot/src/app/home/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container px-5 py-5">
-    <a href=""><img src="../assets/noun_Parrot_2778164.png" width="90"
+    <a href=""><img src="./assets/noun_Parrot_2778164.png" width="90"
             alt="Parrot by Serhii Smirnov from the Noun Project">
         <span class="special-type display-3" style="color: #59FB79">ZeeZee</span></a>
     <div class="mx-5 px-5 text-white h3">
