--- a/src/Parrot.Client/parrot/src/app/pictionary/pictionary/pictionary.component.html
+++ b/src/Parrot.Client/parrot/src/app/pictionary/pictionary/pictionary.component.html
@@ -1,7 +1,7 @@
 <div class="container py-5 text-white">
 
     <div>
-        <a href=""><img src="../assets/noun_Parrot_2778164.png" width="90"
+        <a href=""><img src="./assets/noun_Parrot_2778164.png" width="90"
                 alt="Parrot by Serhii Smirnov from the Noun Project">
             <span class="special-type display-4" style="color: #59FB79">ZeeZee db admin</span></a>
     </div>
