Simplified the home page text.

--- a/src/Parrot.Client/parrot/src/app/home/home/home.component.html
+++ b/src/Parrot.Client/parrot/src/app/home/home/home.component.html
@@ -3,9 +3,9 @@
             alt="Parrot by Serhii Smirnov from the Noun Project">
         <span class="special-type display-3" style="color: #59FB79">ZeeZee</span></a>
     <div class="mx-5 px-5 text-white h3">
-        Hi! I am <span class="h1">ZeeZee</span>, the Parrot. How are you doing? <br />
-        Do you know, I can help you decide on something to draw. <br />
-        Click the blue button to get an idea!
+        Hi! I am <span class="h1">ZeeZee</span>, the Parrot. Squawk! <br />
+        I can tell you what to draw. <br />
+        Click the blue button!
         <br />
         <br />
         <button type="button" class="btn btn-primary" (click)="getAnIdea()">
